tests/miniJava/neg/000304_mutation.MiniJava
class java { public static void Main ( extends [ ] java ) { { } } }
